--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -19,5 +19,9 @@
     <script src="tests/movies.spec.js"></script>
   </head>
 
-  <body></body>
+  <body>
+
+
+    <script src="./src/movies.js"></script>
+  </body>
 </html>
